--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.imgStyle {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
+.common-card-container {
+  display: flex;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
+  justify-items: center;
+  margin: 20px;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  @media screen and (max-width: 600px) {
+    grid-template-columns: 1fr;
+    gap: 10px;
+    .card-content {
+      height: 80px;
+      display: flex;
+      flex-direction: column;
+    }
+    .RawImg {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: cover;
+      margin-bottom: 10px;
+    }
   }
-  to {
-    transform: rotate(360deg);
+}
+
+.common-card {
+  width: 25%;
+  height: 25%;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 5px;
+  background-color: #fff;
+  transition: box-shadow 0.3s ease;
+  margin: 5px;
+  &:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
+  .card-header {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+  }
+
+  .card-content {
+    height: 25%;
+    display: flex;
+  }
+  .RawImg {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    margin-bottom: 10px;
   }
 }
